--- a/meals/templates/meals/detail.html
+++ b/meals/templates/meals/detail.html
@@ -1,15 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <span>{{detail.name}}</span>
-    <span>{{detail.description}}</span>
-    <span>{{detail.people}}</span>
-    <span>{{detail.price}}</span>
-    <span>{{detail.preparation_time}}</span>
-    <img src="{{detail.image.url}}" alt="{{detail.name}}">
-</html>
+{% extends 'base.html' %}
+{% load static %}
+
+
+{% block content %}  
+<div class="main-wrap">
+  <div class="section">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-7 text-center"  data-aos="fade-up">
+          <img  src="{{meal_detail.image.url}}" style="width: 100%;" alt="">
+          <h2>{{meal_detail.name}}</h2>
+          <p>{{meal_detail.description}}</p>
+          <p>For: {{meal_detail.people}} people </p>
+          <p>preparation Time:  {{meal_detail.preperation_time}} Minutes</p>
+          <p>Price: {{meal_detail.price}}$</p>
+        </div>
+      </div>
+    </div>
+  </div> <!-- .section -->  
+</div> <!-- .main-wrap -->
+
+{% endblock content %}
