--- a/meals/templates/meals/list.html
+++ b/meals/templates/meals/list.html
@@ -16,7 +16,8 @@
     </div>
   </div> <!-- .cover_1 -->
 
-
+  
+{% comment %}    
   <div class="section">
     <div class="container">
       <div class="row justify-content-center">
@@ -87,7 +88,10 @@
       </div> <!-- .item -->
 
     </div>
-  </div> <!-- .section -->
+  </div> .section
+{% endcomment %}
+
+
 
   <div class="section">
     <div class="container">
