--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Colorlib Diner</title>
+    <title>
+      
+      {% block title %}
+        Restaurant
+      {% endblock title %}
+        
+    </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
