--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load widget_tweaks %}
 
 {% block title %}
   post detail
@@ -44,94 +45,28 @@
 
 
           <div class="pt-5 mt-5">
-            <h3 class="mb-5">6 Comments</h3>
+            <h3 class="mb-5">Comments</h3>
             <ul class="comment-list">
-              <li class="comment">
-                <div class="vcard bio">
-                  <img src="img/person_1.jpg" alt="Image placeholder">
-                </div>
-                <div class="comment-body">
-                  <h3>Jean Doe</h3>
-                  <div class="meta">January 9, 2018 at 2:21pm</div>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                  <!-- <p><a href="#" class="reply">Reply</a></p> -->
-                </div>
-              </li>
-
-              <li class="comment">
-                <div class="vcard bio">
-                  <img src="img/person_1.jpg" alt="Image placeholder">
-                </div>
-                <div class="comment-body">
-                  <h3>Jean Doe</h3>
-                  <div class="meta">January 9, 2018 at 2:21pm</div>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                  <!-- <p><a href="#" class="reply">Reply</a></p> -->
-                </div>
-
-                <!-- <ul class="children">
-                  <li class="comment">
-                    <div class="vcard bio">
-                      <img src="img/person_1.jpg" alt="Image placeholder">
-                    </div>
-                    <div class="comment-body">
-                      <h3>Jean Doe</h3>
-                      <div class="meta">January 9, 2018 at 2:21pm</div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                      <p><a href="#" class="reply">Reply</a></p>
-                    </div>
-
-
-                    <ul class="children">
-                      <li class="comment">
-                        <div class="vcard bio">
-                          <img src="img/person_1.jpg" alt="Image placeholder">
-                        </div>
-                        <div class="comment-body">
-                          <h3>Jean Doe</h3>
-                          <div class="meta">January 9, 2018 at 2:21pm</div>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                          <p><a href="#" class="reply">Reply</a></p>
-                        </div>
-
-                          <ul class="children">
-                            <li class="comment">
-                              <div class="vcard bio">
-                                <img src="img/person_1.jpg" alt="Image placeholder">
-                              </div>
-                              <div class="comment-body">
-                                <h3>Jean Doe</h3>
-                                <div class="meta">January 9, 2018 at 2:21pm</div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                                <p><a href="#" class="reply">Reply</a></p>
-                              </div>
-                            </li>
-                          </ul>
-                      </li>
-                    </ul>
-                  </li>
-                </ul> -->
-              
-              </li>
-
-              <li class="comment">
-                <div class="vcard bio">
-                  <img src="img/person_1.jpg" alt="Image placeholder">
-                </div>
-                <div class="comment-body">
-                  <h3>Jean Doe</h3>
-                  <div class="meta">January 9, 2018 at 2:21pm</div>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                  <!-- <p><a href="#" class="reply">Reply</a></p> -->
-                </div>
-              </li>
+              {% for comment in comments %}
+                <li class="comment">
+                  <div class="vcard bio">
+                    <!-- <img src="img/person_1.jpg" alt="Image placeholder"> -->
+                  </div>
+                  <div class="comment-body">
+                    <h3>{{comment.user.username}}</h3>
+                    <div class="meta">{{comment.created}}</div>
+                    <p>{{comment.content}}</p>
+                    <!-- <p><a href="#" class="reply">Reply</a></p> -->
+                  </div>
+                </li>
+              {% endfor %}
             </ul>
             <!-- END comment-list -->
             
             <div class="comment-form-wrap pt-5">
               <h3 class="mb-5">Leave a comment</h3>
-              <form action="#" class="p-5 bg-light">
-                <div class="form-group">
+              <form action="" method="POST" class="p-5 bg-light">
+                <!-- <div class="form-group">
                   <label for="name">Name *</label>
                   <input type="text" class="form-control" id="name">
                 </div>
@@ -142,11 +77,12 @@
                 <div class="form-group">
                   <label for="website">Website</label>
                   <input type="url" class="form-control" id="website">
-                </div>
-
+                </div> -->
+                {% csrf_token %}
                 <div class="form-group">
                   <label for="message">Message</label>
-                  <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
+                  <!-- <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea> -->
+                  {% render_field comment_form.content rows="3"  cols="30" id="message" class="form-control" %}
                 </div>
                 <div class="form-group">
                   <input type="submit" value="Post Comment" class="btn btn-primary">
