--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -45,17 +45,40 @@
       </div>
 
       <div class="row">
-        <div class="col-md-12">
-          <ul class="pagination custom-pagination">
-            <li class="page-item prev"><a class="page-link" href="#"><i class="fa fa-angle-left"></i></a></li>
-            <li class="page-item active"><a class="page-linkx href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item next"><a class="page-link" href="#"><i class="fa fa-angle-right"></i></a></li>
-          </ul>
+        
+        {% if posts.has_other_pages %}          
+          <div class="col-md-12">
+            <ul class="pagination custom-pagination">
+              
+              {% if posts.has_previous %}
+                <li class="page-item prev"><a class="page-link" href="?page={{posts.previous_page_number}}"><i class="fa fa-angle-left"></i></a></li>
+              {% else %}
+                <li class="disabled"></li>
+              {% endif %}
+              
+              
+              {% for pages in posts.paginator.page_range %}
+                
+                {% if posts.number == pages %}
+                  <li class="page-item active"><a class="page-linkx href="#">{{pages}}</a></li>
+                {% else %}
+                  <li class="page-item active"><a class="page-linkx href="?page={{pages}}">{{pages}}</a></li>
+                {% endif %}
+                  
+                
+              {% endfor %}
+                
 
+              
+              {% if posts.has_next %}
+                <li class="page-item next"><a class="page-link" href="?page={{posts.next_page_number}}"><i class="fa fa-angle-right"></i></a></li>
+              {% else %}
+                <li class="disabled"></li>
+              {% endif %}
+            </ul>
+          </div>
+        {% endif %}
 
-        </div>
       </div>
     </div>
   </div> <!-- .section -->
