--- a/templates/footer.html
+++ b/templates/footer.html
@@ -40,8 +40,8 @@
                 </form>
 
                 <h3>Contact Us</h3>
-                <p class="contact-email">info@yourdomain.com</p>
-                <p class="contact-phone">1-444-123-9829</p>
+                <p class="contact-email">shir@danishyar.com</p>
+                <p class="contact-phone">+93777904222</p>
                 
                 
             </div>
