--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
 {% block content %}    
 <div class="main-wrap">
     <div class="cover_1">
-        <div class="img_bg" style="background-image: url(img/slider-1.jpg);" data-stellar-background-ratio="0.5">
+        <div class="img_bg" style="background-image: url({% static 'img/slider-1.jpg' %});" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row align-items-center">
             <div class="col-md-12" data-aos="fade-up">
@@ -92,7 +92,7 @@
                     <div class="image order-1 order-lg-1 order-xl-2" style="background-image: url({{meal.image.url}});" data-aos="fade" data-aos-delay="100"></div>
                     <div class="text order-2 order-lg-2 order-xl-1">
                     <h3>{{meal.name}}</h3>
-                    <p>{{meal.description|truncatewords:10}}</p>
+                    <p>{{meal.description|striptags|truncatewords:10}}</p>
                     <p class="price">${{meal.price}}</p>
                     </div>
                 </div> <!-- .item -->
@@ -126,7 +126,7 @@
                         <div class="d-block d-md-flex menu-food-item">
                           <div class="text order-1 mb-3">
                             <h3><a href="{% url 'meals:detail' meal.slug %}">{{meal.name}}</a></h3>
-                            <p>{{meal.description|truncatewords:30}}</p>
+                            <p>{{meal.description|striptags|truncatewords:30}}</p>
                           </div>
                           <div class="price order-2">
                             <strong>${{meal.price}}</strong>
